--- a/VCT.Test/VCT.Test.csproj
+++ b/VCT.Test/VCT.Test.csproj
@@ -5,7 +5,7 @@
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <ProjectGuid>{14A87583-371B-48B6-9F52-80F110F25CA8}</ProjectGuid>
-    <OutputType>Exe</OutputType>
+    <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>VCT.Test</RootNamespace>
     <AssemblyName>VCT.Test</AssemblyName>
@@ -64,11 +64,10 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="TestCore.cs" />
-    <Compile Include="ImageFileComparer.cs" />
-    <Compile Include="Program.cs" />
-    <Compile Include="SecondFakeTestFixture.cs" />
-    <Compile Include="ScreenshotMaker.cs" />
+    <Compile Include="Framework\ImageFileComparer.cs" />
+    <Compile Include="Framework\ScreenshotMaker.cs" />
+    <Compile Include="Framework\TestCore.cs" />
+    <Compile Include="FakeTestFixture.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
