--- a/.hgignore
+++ b/.hgignore
@@ -1,13 +1,13 @@
 syntax: regexp
 
 Output/*
-Storage/*
 .nuget/*
 packages/*/*/
 VCT.Server/bin/*/*
 VCT.Test/bin/*/*
 VCT.Client/bin/*/*
-
+VCT.Server/node_modules/*/*
+VCT.Server/Storage/*/*
 syntax: glob
 
 *.suo
