extract historyFileName to app.config

--- a/VCT.Server/App.config
+++ b/VCT.Server/App.config
@@ -8,6 +8,7 @@
 		<add key="rootUrl"	value="http://localhost:9111/" />
 		<add key="rootDir"	value="C:\projects\VCT\VCT.Server" />
 		<add key="storage"	value="C:\projects\VCT\VCT.Server\Storage" />
+		<add key="history"	value="suiteInformation.txt" />
 
 	</appSettings>
 	
