Issue #19 add target for client

--- a/.hgignore
+++ b/.hgignore
@@ -2,9 +2,9 @@ syntax: regexp
 
 Output/*
 .nuget/*
+Deploy/*/*
 packages/*/*/
 VCT.Server/bin/*/*
-VCT.Server/Deploy/*/*
 VCT.Server/node_modules/*/*
 VCT.Server/Storage/*/*
 
