move DateFormat to config

--- a/VCT.Server/App.config
+++ b/VCT.Server/App.config
@@ -5,10 +5,11 @@
 	</startup>
 	
 	<appSettings>
-		<add key="rootUrl"	value="http://localhost:9111/" />
-		<add key="rootDir"	value="C:\projects\VCT\VCT.Server" />
-		<add key="storage"	value="C:\projects\VCT\VCT.Server\Storage" />
-		<add key="history"	value="suiteInformation.txt" />
+		<add key="rootUrl"		value="http://localhost:9111/" />
+		<add key="rootDir"		value="C:\projects\VCT\VCT.Server" />
+		<add key="storage"		value="C:\projects\VCT\VCT.Server\Storage" />
+		<add key="history"		value="suiteInformation.txt" />
+		<add key="dateFormat"	value="dd.MM.yyyy_HH.mm.ss" />
 
 	</appSettings>
 	
