--- a/VCT.Server/package.json
+++ b/VCT.Server/package.json
@@ -1,19 +1,26 @@
 {
-  "name": "react-ru-tutorial",
+  "name": "VisualComparingTool",
   "version": "1.0.0",
-  "description": "React RU tutorial",
-  "main": "index.html",
+  "description": "Front end for previewing results of tests",
+  "main": "index.js",
   "scripts": {
-    "start": "node server.js"
+    "start": "webpack-dev-server --inline --hot --content-base .",
+    "dev": "webpack --watch"
   },
   "author": "Andrew Egorov",
   "license": "MIT",
-  "devDependencies": {
-    "express": "^4.13.4"
-  },
   "dependencies": {
-    "react": "^0.14.8",
-    "react-bootstrap": "^0.28.5",
-    "react-dom": "^0.14.8"
+    "react": "^0.14.7",
+    "react-dom": "^0.14.7",
+    "react-router": "^2.0.0"
+  },
+  "devDependencies": {
+    "babel-core": "^6.5.1",
+    "babel-loader": "^6.2.2",
+    "babel-preset-es2015": "^6.5.0",
+    "babel-preset-react": "^6.5.0",
+    "http-server": "^0.8.5",
+    "webpack": "^1.12.13",
+    "webpack-dev-server": "^1.14.1"
   }
 }
