--- a/VCT.Server/package.json
+++ b/VCT.Server/package.json
@@ -19,7 +19,11 @@
     "babel-loader": "^6.2.2",
     "babel-preset-es2015": "^6.5.0",
     "babel-preset-react": "^6.5.0",
+    "css-loader": "^0.23.1",
     "http-server": "^0.8.5",
+    "node-sass": "^3.8.0",
+    "sass-loader": "^4.0.0",
+    "style-loader": "^0.13.1",
     "webpack": "^1.12.13",
     "webpack-dev-server": "^1.14.1"
   }
