--- a/VCT.Test/VCT.Test.csproj
+++ b/VCT.Test/VCT.Test.csproj
@@ -66,7 +66,7 @@
   <ItemGroup>
     <Compile Include="Framework\Comparers\ImageFileComparer.cs" />
     <Compile Include="Framework\ScreenshotMaker.cs" />
-    <Compile Include="Framework\TestCore.cs" />
+    <Compile Include="Framework\SampleTestCore.cs" />
     <Compile Include="FakeTestFixture.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
