--- a/VCT.Server/VCT.Server.csproj
+++ b/VCT.Server/VCT.Server.csproj
@@ -80,10 +80,8 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="ApiController.cs" />
-    <Compile Include="Helpers\Extensions.cs" />
     <Compile Include="Helpers\SimpleLogger.cs" />
     <Compile Include="Helpers\UploadMultipartFormProvider.cs" />
-    <Compile Include="Helpers\Utils.cs" />
     <Compile Include="Helpers\WebHelpers.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
@@ -96,6 +94,12 @@
       <SubType>Designer</SubType>
     </None>
     <None Include="packages.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\VCT.Sdk\VCT.Sdk.csproj">
+      <Project>{77bc9f8d-4d6f-4a95-9d0a-eda6ba2ecf75}</Project>
+      <Name>VCT.Sdk</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="$(SolutionDir)\.nuget\nuget.targets" />
