--- a/VCT.Client/VCT.Client.csproj
+++ b/VCT.Client/VCT.Client.csproj
@@ -39,6 +39,10 @@
       <HintPath>..\packages\Magick.NET-Q16-AnyCPU.7.0.2.600\lib\net40-client\Magick.NET-Q16-AnyCPU.dll</HintPath>
       <Private>True</Private>
     </Reference>
+    <Reference Include="Newtonsoft.Json, Version=6.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\packages\Newtonsoft.Json.6.0.8\lib\net45\Newtonsoft.Json.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Drawing" />
@@ -49,8 +53,13 @@
     <Reference Include="Microsoft.CSharp" />
     <Reference Include="System.Data" />
     <Reference Include="System.Xml" />
+    <Reference Include="WebDriver">
+      <HintPath>..\Libs\Selenium\net40\WebDriver.dll</HintPath>
+    </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Modules\ScreenshotMaker.cs" />
+    <Compile Include="VisualComparer.cs" />
     <Compile Include="Comparers\ImageFileComparer.cs" />
     <Compile Include="Modules\Comparing.cs" />
     <Compile Include="Shell.cs" />
