--- a/VCT.Server/packages.config
+++ b/VCT.Server/packages.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="EntityFramework" version="6.1.0" targetFramework="net45" />
   <package id="Microsoft.AspNet.WebApi.Client" version="5.2.3" targetFramework="net45" />
   <package id="Microsoft.AspNet.WebApi.Core" version="5.2.3" targetFramework="net45" />
   <package id="Microsoft.AspNet.WebApi.Owin" version="5.2.3" targetFramework="net45" />
@@ -11,4 +12,9 @@
   <package id="Microsoft.Owin.StaticFiles" version="3.0.1" targetFramework="net45" />
   <package id="Newtonsoft.Json" version="6.0.8" targetFramework="net45" />
   <package id="Owin" version="1.0" targetFramework="net45" />
+  <package id="SQLite.CodeFirst" version="1.2.4.16" targetFramework="net45" />
+  <package id="System.Data.SQLite" version="1.0.103" targetFramework="net45" />
+  <package id="System.Data.SQLite.Core" version="1.0.103" targetFramework="net45" />
+  <package id="System.Data.SQLite.EF6" version="1.0.103" targetFramework="net45" />
+  <package id="System.Data.SQLite.Linq" version="1.0.103" targetFramework="net45" />
 </packages>
