fill predefined data before start

--- a/VCT.Server/VCT.Server.csproj
+++ b/VCT.Server/VCT.Server.csproj
@@ -116,6 +116,7 @@
     <Compile Include="Startup.cs" />
     <Compile Include="Storage.cs" />
     <Compile Include="StorageContext.cs" />
+    <Compile Include="StorageDbInitializer.cs" />
     <Compile Include="TestResultFiles.cs" />
   </ItemGroup>
   <ItemGroup>
